--- a/css/home.css
+++ b/css/home.css
@@ -771,11 +771,15 @@ nav {
 .card-6 {
     background-image: url('../imagens/eventos_dodorex_home.webp');
     box-shadow: 0 5px 15px rgba(179, 1, 250, 0.61);
+    display: block; /* Garante que o link ocupe toda a área */
+    text-decoration: none;
 }
 
 .card-7 {
     background-image: url('../imagens/tribo_home.png');
     box-shadow: 0 5px 15px rgba(250, 142, 1, 0.61);
+    display: block; /* Garante que o link ocupe toda a área */
+    text-decoration: none;
 }
 
 .card-8 {
